tweaks for linux

--- a/fluidsynth-static/makefile
+++ b/fluidsynth-static/makefile
@@ -4,11 +4,25 @@ STAGING_DIR=$(shell pwd)
 
 STAGING_SUBDIRS=$(addprefix $(STAGING_DIR)/,bin include lib share)
 
+CONFIGURE_OPTS=--disable-pulse\
+ --disable-alsa-support\
+ --disable-portaudio-support\
+ --disable-oss-support\
+ --enable-midishare\
+ --disable-jack-support\
+ --disable-coreaudio\
+ --disable-coremidi\
+ --disable-dart\
+ --disable-lash\
+ --disable-ladcca\
+ --without-readline 
+
 all: 
 	cd $(FLUIDSYNTH_DIR) &&\
- CFLAGS="$(ARCHOPTS)" LDFLAGS="$(ARCHOPTS)" ./configure --prefix=$(STAGING_DIR) --enable-static &&\
- make &&\
- make install\
+ CFLAGS="$(ARCHOPTS)" LDFLAGS="$(ARCHOPTS)" \
+ ./configure --prefix=$(STAGING_DIR) --enable-static $(CONFIGURE_OPTS)
+	make -C $(FLUIDSYNTH_DIR)
+	make -C $(FLUIDSYNTH_DIR) install
 
 clean:
 	make -C $(FLUIDSYNTH_DIR) clean
